fixed spacing.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
-/* * {
-  text-align: center;
-} */
+.App {
+  background-color: rgba(0, 0, 0, 0.4);
+  height: 100vh;
+}
